manifests/test/default-namespace/networking.k8s.io_v1_networkpolicy_internet-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internet-egress
  namespace: default
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.244.0.0/16
        - 10.96.0.0/12
  podSelector: {}
  policyTypes:
  - Egress
